# DigitalImageProcessing

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  array2D.h  dft.cpp  dft.h  image.cpp  image.h  image_path.h.in
examples/: CMakeLists.txt  main.cpp
filters/: gaussian.cpp  gaussian.h
primitive/: CMakeLists.txt  harris_detector.cpp  harris_detector.h
segmentation/: active_contour_model.cpp  active_contour_model.h  laplacian.cpp  laplacian.h  marr_hildreth.cpp  marr_hildreth.h  prewitt.cpp  prewitt.h  roberts.cpp  roberts.h  sobel.cpp  sobel.h
spaceAlgorithm/: contrast_enhancement.cpp  contrast_enhancement.h  histogram_equalization.cpp  histogram_equalization.h  image_inversion.cpp  image_inversion.h
tests/: CMakeLists.txt
tests/spaceAlgorithm/: image_inversion_test.cpp
